# Dynamic-typing

./: .gitignore  .gitmodules  CMakeLists.txt  INSTRS.txt  README.md  TODO.txt  build.sh  exp.cpp  p  package-lock.json  package.json
include/: blob_types.hpp  common_helpers.hpp  constexpr_to_runtime_helper.hpp  dynamic_typing.hpp  interfaces.hpp  primitive_types.hpp  string_helper.hpp  types.hpp  variant_helper.hpp
src/: CMakeLists.txt  common_helpers.hpp  compile.sh  dynamic_typing.hpp  generate_json_ast.js  prog.cpp  runtime.hpp  string_helper.hpp  tmp.cpp  types.hpp  variant_helper.hpp
src/dynamic_typing/: CMakeLists.txt  dynamic_typing.cpp  dynamic_typing.hpp  variant_helper.hpp
tests/: CMakeLists.txt  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_blob.cpp  test_compiletime.cpp  test_js.cpp  test_runtime.cpp  test_type_interop.cpp
tests/js/: test0.js  test1.js  test2.js
