link_libraries(${PROJECT_NAME})
add_compile_options(-ggdb -Wall -Wextra -Wconversion -Wno-unused-variable)

add_executable(test0 test0.cpp)
add_executable(test1 test1.cpp)
# add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)
add_executable(test5 test5.cpp)
